--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,5 +1,11 @@
 <ion-header class="ion-no-border">
+
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-buttons slot="start">
+        <ion-menu-button menu="first"></ion-menu-button>
+      </ion-buttons>
+    </ion-buttons>
     <ion-title>Componentes</ion-title>
   </ion-toolbar>
 </ion-header>
