--- a/src/app/pages/input/input.page.html
+++ b/src/app/pages/input/input.page.html
@@ -9,10 +9,43 @@
     </ion-list-header>
 
     <ion-item>
-      <ion-label position="floating" >Nombre</ion-label>
+      <ion-label position="floating">Nombre</ion-label>
       <ion-input type="text" [(ngModel)]="nombre"></ion-input>
     </ion-item>
 
   </ion-list>
+
+  <form #formulario="ngForm" (ngSubmit)="onSubmitTemplate()">
+
+    <ion-list>
+      <ion-list-header>
+        <ion-label>Formulario de usuario</ion-label>
+        <ion-label>Formulario valido: {{ formulario.valid }}</ion-label>
+      </ion-list-header>
+
+      <ion-item>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input type="email"
+                   name="email" 
+                   [(ngModel)]="usuario.email"
+                   pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"
+                   required></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Password</ion-label>
+        <ion-input type="password"
+                   name="password" 
+                   [(ngModel)]="usuario.password"
+                   required></ion-input>
+      </ion-item>
+
+      <ion-button expand="full" fill="outline" color="primary" type="submit" [disabled]="formulario.invalid">
+        ENVIAR
+      </ion-button>
+
+    </ion-list>
+
+  </form>
 
 </ion-content>
